crates/analyzer/tests/snapshots/errors__overflow_u128_pos.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: literal out of range for `u128`
  ┌─ [snippet]:3:8
  │
3 │   u128(340282366920938463463374607431768211456)
  │        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ does not fit into type `u128`


