crates/analyzer/tests/snapshots/errors__overflow_u16_pos.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: literal out of range for `u16`
  ┌─ [snippet]:3:7
  │
3 │   u16(65536)
  │       ^^^^^ does not fit into type `u16`


