crates/analyzer/tests/snapshots/errors__overflow_u256_neg.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: literal out of range for `u256`
  ┌─ [snippet]:3:8
  │
3 │   u256(-1)
  │        ^^ does not fit into type `u256`


