crates/analyzer/tests/snapshots/errors__overflow_u32_neg.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: literal out of range for `u32`
  ┌─ [snippet]:3:7
  │
3 │   u32(-1)
  │       ^^ does not fit into type `u32`


